@@ -1779,7 +1779,7 @@ public class Variable implements VariableIF {
   ////////////////////////////////
 
   /**
-   * Calculate if this is a coordinate variable: has same name as its first dimension.
+   * Calculate if this is a classic coordinate variable: has same name as its first dimension.
    * If type char, must be 2D, else must be 1D.
    * @return true if a coordinate variable.
    */
