@@ -14,8 +14,7 @@
   <li><strong>joinExisting:</strong> all variables that have the aggregation dimension as the outer dimension </li>
   <li><strong>joinNew</strong>: only variables explicitly specified in a <strong><em>variableAgg</em></strong> element </li>
   <li><strong>tiled</strong>: </li>
-  <li><strong>forecastModelRunCollection</strong>: any variable that has a grid coordinate system, ie is recognized as a Grid by the CDM. </li>
-  <li><strong>forecastModelRunCollectionSingle</strong>: any variable that has a grid coordinate system, ie is recognized as a Grid by the CDM. </li>
+  <li><strong>forecastModelRunCollection, forecastModelRunCollectionSingle</strong>: any variable that has a grid coordinate system, ie is recognized as a Grid by the CDM. Exclude coordinate axes, unless explicitly speced in &lt;variableAgg&gt; </li>
 </ul>
 <h3>Reading Files to get Initial State </h3>
 <ul>
